--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
     "@types/redux-actions": "^2.6.1",
+    "firebase": "^7.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
