--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.22",
+    "@types/mathjs": "^6.0.2",
     "@types/node": "12.12.7",
     "@types/redux-actions": "^2.6.1",
     "firebase": "^7.3.0",
+    "mathjs": "^6.2.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
