--- a/package.json
+++ b/package.json
@@ -2,33 +2,31 @@
   "name": "bntu-map",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.22",
-    "@types/mathjs": "^6.0.2",
-    "@types/node": "12.12.7",
-    "@types/redux-actions": "^2.6.1",
-    "firebase": "^7.3.0",
-    "mathjs": "^7.5.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-actions": "^2.6.5",
-    "redux-saga": "^1.1.3",
-    "typescript": "3.7.2"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:eslint": "eslint --ignore-path .gitignore --ext .ts --ext .tsx",
-    "lint": "npm run lint:eslint src/",
+    "lint": "eslint --ignore-path .gitignore",
     "lint:fix": "npm run lint:eslint src/ -- --fix"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "firebase": "^9.6.10",
+    "mathjs": "^10.4.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.1",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.23",
+    "@types/redux-actions": "^2.6.2",
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.6.3"
   },
   "browserslist": {
     "production": [
@@ -41,19 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "prettier": "^1.19.1",
-    "redux-devtools-extension": "^2.13.8"
   }
 }
